# bevyGUI

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: bin.glb  building.glb  bush.glb  coin.glb  crate.glb  deepWater.glb  fish.glb  garbage.glb  grass.glb  hill.glb  lava.glb  market.glb  mountain.glb  rock.glb  sand.glb  shallowWater.glb  snow.glb  street.glb  teleport.glb  tree.glb  unknown.glb  wall.glb
src/: components.rs  file_test.rs  main.rs  map_update.rs  robot.rs  startup.rs  utils.rs  utils_for_ai.rs
src/alberto_gui/: mod.rs
src/alessandro_gui/: generator.rs  main.rs  map_update.rs  mod.rs  robot.rs  robot_utils.rs
src/alessio_gui/gui/: utils.rs
src/alessio_gui/gui/hud/: components.rs
src/alessio_gui/gui/hud/systems/: layout.rs
src/alessio_gui/gui/system/: startup.rs  updates.rs
src/alessio_gui/utils/: utils_for_ai.rs
src/gui/: components.rs  mod.rs  utils.rs
src/gui/hud/: mod.rs  styles.rs
src/gui/hud/systems/: layout.rs  mod.rs  updates.rs  utils.rs
src/gui/system/: mod.rs  startup.rs  updates.rs
src/robot/: mod.rs
src/utils/: mod.rs  utils_for_ai.rs
