[package]
name = "first_bevy_game"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"]}
rand = "0.8.5"
strum = "0.25.0"
strum_macros = { version = "0.25.3", features = [] }
robotics_lib = { version = "0.1.21", registry = "kellnr"}
ohcrab_weather = { version = "0.1.2", registry = "kellnr"}
oxagaudiotool = { version = "0.2.0", registry = "kellnr"}
lazy_static = "1.4.0"
bevy-progressbar = "0.6.1"
bevy_utils = "0.12.1"
exclusion_zone_world_generator = { version = "0.1.4", registry = "kellnr" }
oxagworldgenerator = { version = "0.1.4", registry = "kellnr" }
recycle_by_ifrustrati = { version = "0.1.2", registry = "kellnr" }
